--- a/html/components/component_input_radio.html
+++ b/html/components/component_input_radio.html
@@ -135,6 +135,73 @@
 					</dd>
 				</dl>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>inp-round</h2>
+				<dl>
+					<dt></dt>
+					<dd>
+
+						<div class="inp-round">
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="없음">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="90%" disabled>
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="80%">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="70%">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="60%">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="90%">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="50%">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="40%">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="30%">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="20%">
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad001" aria-label="10%">
+								</label>
+							</div>
+						</div>
+					</dd>
+				</dl>
+			</div>
 		</div>
 	</div>
 </body>
