--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -279,6 +279,34 @@
 				</div>
 			</div>
 			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-percent</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-36 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-32 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-28 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-24 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-20 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-14 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-12 icon-percent bg-icon-default"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-calculator</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-calculator bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
 
 		</div>
 	</div>
