--- a/html/components/component_modal.html
+++ b/html/components/component_modal.html
@@ -287,7 +287,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-outlined" data-micromodal-close>저장</button>
 							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
 						</div>
 					</div>
@@ -316,7 +316,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-secondary" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-outlined" data-micromodal-close>저장</button>
 							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
 						</div>
 					</div>
@@ -346,7 +346,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-secondary" data-micromodal-close>저장 저장 저장</button>
+							<button type="button" class="btn-large btn-outlined" data-micromodal-close>저장 저장 저장</button>
 							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
 						</div>
 					</div>
