--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -101,6 +101,7 @@
 				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-memo"></i>메모 등록</button>
 				<button type="button" class="btn-xsmall btn-outlined btn-round">바로가기<i class="ico-chevron"></i></button>
 				<button type="button" class="btn-xsmall btn-outlined btn-round">반도체<i class="ico-close-16"></i></button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-reply"></i>답글</button>
 				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-grid"></i>표 보기</button>
 				<div class="btn-xsmall btn-outlined btn-round">
 					<button class="btn-inner">반도체</button>
