--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -252,6 +252,20 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
+				<h2>icon-fav-active2</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-fav-active2"></i>
+					<i class="icon-only icon-36 icon-fav-active2"></i>
+					<i class="icon-only icon-32 icon-fav-active2"></i>
+					<i class="icon-only icon-28 icon-fav-active2"></i>
+					<i class="icon-only icon-24 icon-fav-active2"></i>
+					<i class="icon-only icon-20 icon-fav-active2"></i>
+					<i class="icon-only icon-14 icon-fav-active2"></i>
+					<i class="icon-only icon-12 icon-fav-active2"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
 				<h2>icon-noresult</h2>
 				<div class="guide-column-list">
 					<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
