--- a/html/components/component_input_radio.html
+++ b/html/components/component_input_radio.html
@@ -202,6 +202,71 @@
 					</dd>
 				</dl>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>inp-image</h2>
+				<dl>
+					<dt></dt>
+					<dd>
+						<div class="inp-image">
+							<div class="inp">
+								<label>
+									<input type="radio" name="radimg" class="blind">
+									<picture>
+										<source srcset="../../resources/images/avatar/profile_type1.svg">
+										<img src="../../resources/images/avatar/profile_type1.svg" alt="위비">
+									</picture>
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="radimg" class="blind">
+									<picture>
+										<source srcset="../../resources/images/avatar/profile_type2.svg">
+										<img src="../../resources/images/avatar/profile_type2.svg" alt="쿠">
+									</picture>
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="radimg" class="blind">
+									<picture>
+										<source srcset="../../resources/images/avatar/profile_type3.svg">
+										<img src="../../resources/images/avatar/profile_type3.svg" alt="푸딩">
+									</picture>
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="radimg" class="blind">
+									<picture>
+										<source srcset="../../resources/images/avatar/profile_type4.svg">
+										<img src="../../resources/images/avatar/profile_type4.svg" alt="두지">
+									</picture>
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="radimg" class="blind">
+									<picture>
+										<source srcset="../../resources/images/avatar/profile_type5.svg">
+										<img src="../../resources/images/avatar/profile_type5.svg" alt="달보">
+									</picture>
+								</label>
+							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="radimg" class="blind">
+									<picture>
+										<source srcset="../../resources/images/avatar/profile_type6.svg">
+										<img src="../../resources/images/avatar/profile_type6.svg" alt="봄봄">
+									</picture>
+								</label>
+							</div>
+						</div>
+					</dd>
+				</dl>
+			</div>
 		</div>
 	</div>
 </body>
