--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -285,10 +285,14 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 .modal__overlay {display:block;background-color:var(--status-dimmed);}
 
-.micromodal-slide-select .modal__overlay {background-color:transparent;}
-.micromodal-slide-select .modal__header {display:none;}
-.micromodal-slide-select .modal__container {max-height:none;position:absolute;}
-.micromodal-slide-select .modal__container {border-radius:6px;box-shadow:0px 2px 30px -4px rgba(0, 0, 0, 0.15);}
+.micromodal-slide-select .modal__overlay,
+.micromodal-slide-dropdown .modal__overlay {background-color:transparent;}
+.micromodal-slide-select .modal__header,
+.micromodal-slide-dropdown .modal__header {display:none;}
+.micromodal-slide-select .modal__container,
+.micromodal-slide-dropdown .modal__container {max-height:none;position:absolute;}
+.micromodal-slide-select .modal__container,
+.micromodal-slide-dropdown .modal__container {border-radius:6px;box-shadow:0px 2px 30px -4px rgba(0, 0, 0, 0.15);}
 
 
 
@@ -298,7 +302,10 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .micromodal-slide-bottom .modal__content {/* background-color:var(--white-100); *//* padding:30px 16px 20px; *//* border-radius:20px 20px 0 0; *//* max-height:80vh; *//* overflow-y:auto; */}
 .micromodal-slide-bottom.micromodal-slide-bottom-full .modal__container {height:100%;}
 
-.micromodal-slide-dropdown .modal__container {position:absolute;background-color:var(--white);padding:10px 24px;border-radius:12px;}
+/* .micromodal-slide-dropdown .modal__container {position:absolute;background-color:var(--white);padding:10px 24px;border-radius:12px;} */
+
+
+
 
 @keyframes mmslideIn {
     from {
