--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -321,6 +321,19 @@
 				</div>
 			</div>
 			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-caution</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-caution bg-icon-gray_1"></i>
+				</div>
+			</div>
 
 		</div>
 	</div>
