--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -245,7 +245,8 @@ div:where(.swal2-container) {left:0;top:0;width:100%;}
 div:where(.swal2-container) div:where(.swal2-popup) {width:calc(100vw - 72px);border-radius:8px;padding-bottom:0;overflow:hidden;}
 
 
-div:where(.swal2-container) h2:where(.swal2-title) {font-size:18px;color:var(--typography-title);text-align:left;padding:24px 24px 8px;font-weight:500;}
+div:where(.swal2-container) h2:where(.swal2-title) {font-size:18px;color:var(--typography-title);text-align:left;font-weight:500;padding:24px 24px 8px!important;}
+
 div:where(.swal2-container) .swal2-html-container {margin:16px 24px 0;}
 div:where(.swal2-container) div:where(.swal2-actions).btn-wrap {margin:0;padding:16px;}
 div:where(.swal2-container) div:where(.swal2-actions) .btn-alert {flex:1;font-size:16px;font-weight:700;line-height:60px;color:var(--gray900);text-align:center;}
